--- a/app/views/experts/_form.html.erb
+++ b/app/views/experts/_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, :class => "form-control" %>
   </div>
     <%= f.fields_for :questions do |builder| %>
-        <div class="field">
+        <div class="form-group">
         <%= builder.label :text, "Question" %>
-        <%= builder.text_field :text %>
+          <%= builder.text_field :text, :class => "form-control" %>
         </div>
     <% end %>
       <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :class => "btn btn-default" %>
   </div>
 <% end %>
