Added histogram for analysing experts

--- a/app/views/experts/show.html.erb
+++ b/app/views/experts/show.html.erb
@@ -12,8 +12,11 @@
         <li><%= question.text %> </li>
     <% end %>
   </ul>
-
 </p>
-
+<p>
+    <div id='chart'></div>
+</p>
 <%= link_to 'Edit', edit_expert_path(@expert) %> |
 <%= link_to 'Back', experts_path %>
+<%= render_chart @chart, 'chart' %>
+
